hphp/hack/test/decl/classes.php.typecheck.exp
File "classes.php", line 4, characters 27-41:
Please assign a value (Typing[4055])
File "classes.php", line 3, characters 7-13:
Class MyClass does not initialize all of its members; instanceProperty protectedProperty are not always initialized.
Make sure you systematically set $this->instanceProperty $this->protectedProperty when the method __construct is called.
Alternatively, you can define the members as optional (?...)
 (NastCheck[3015])
