hphp/hack/test/decl/classes.php
<?hh

class MyClass {
    private static string $staticProperty;
    public string $instanceProperty;
    protected int $protectedProperty;
}
